Seção de preço concluída

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
 
         <div class="preco-item">
-            <h2>Cobre</h2>
+            <h2>Prata</h2>
             <span><sup>R$</sup>39</span>       
             <ul>
                 <li>Planos Ilimitados</li>
@@ -102,7 +102,7 @@
         </div>
 
         <div class="preco-item">
-            <h2>Cobre</h2>
+            <h2>Ouro</h2>
             <span><sup>R$</sup>79</span>       
             <ul>
                 <li>Planos Ilimitados</li>
