--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Blog feito com a tecnologia flexbox.">
+    <meta name="keywords" content="flexbox">
+    <meta name="robots" content="noindex, nofollow">
+    <meta name="author" content="Ramon Gomes">
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,400i,700|Raleway" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Flexblog</title>
